<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplication.ui.HomeFragment"
        android:label="@string/home_title">
        <argument
            android:name="selectedDate"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_homeFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.example.myapplication.ui.AddEditTaskFragment"
        android:label="@string/add_task_title">
        <argument
            android:name="taskId"
            app:argType="long"
            android:defaultValue="-1L" />
        <argument
            android:name="selectedDate"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myapplication.ui.ProfileFragment"
        android:label="@string/profile_title">
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/shopFragment"
        android:name="com.example.myapplication.ui.ShopFragment"
        android:label="@string/shop_title" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.myapplication.ui.CalendarFragment"
        android:label="@string/calendar_title">
        <action
            android:id="@+id/action_calendarFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.myapplication.ui.SettingsFragment"
        android:label="@string/settings_title" />

</navigation>
